--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -28,7 +28,7 @@
 
             <EditText
                 android:id="@+id/name"
-                android:text="@={vm.user.value.name}"
+                android:text="@={vm.user.name}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -46,7 +46,7 @@
 
             <EditText
                 android:id="@+id/age"
-                android:text="@={``+vm.user.value.age}"
+                android:text="@={``+vm.user.age}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -64,7 +64,7 @@
 
             <EditText
                 android:id="@+id/address"
-                android:text="@={vm.user.value.address}"
+                android:text="@={vm.user.address}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
