--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -28,7 +28,7 @@
 
             <EditText
                 android:id="@+id/name"
-                android:text="@={vm.user.name}"
+                app:txt="@={vm.user.name}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -71,7 +71,7 @@
 
         <Button
             android:id="@+id/printLog"
-            android:onClick="@{vm::printLog}"
+            android:onClick="@{vm.printLog}"
             android:text="打印Log"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
